--- a/investment-clawer/pom.xml
+++ b/investment-clawer/pom.xml
@@ -8,9 +8,7 @@
 		<artifactId>investment-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com.gary.investment</groupId>
 	<artifactId>investment-clawer</artifactId>
-	<version>1.0-SNAPSHOT</version>
 	<name>investment-clawer</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -22,6 +20,10 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
 </project>
